--- a/solution/package.json
+++ b/solution/package.json
@@ -10,6 +10,11 @@
   "scripts": {
     "start": "vite",
     "start-local": "vite --config ./vite.config.local.js",
-    "build": "vite build"
+    "build": "vite build",
+    "dev": "vite"
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.0",
+    "typescript": "^5.6.3"
   }
 }
