--- a/solution/package.json
+++ b/solution/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
     "typescript": "^5.6.3"
   }
 }
