--- a/solution/package.json
+++ b/solution/package.json
@@ -2,11 +2,16 @@
   "type": "module",
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.5.3",
+    "@react-google-maps/api": "^2.20.3",
     "@vis.gl/react-google-maps": "latest",
+    "add": "^2.0.6",
     "nanoid": "^5.0.8",
+    "or": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^5.0.4"
+    "use-deep-compare": "^1.3.0",
+    "vite": "^5.0.4",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "vite",
