--- a/solution/package.json
+++ b/solution/package.json
@@ -1,17 +1,15 @@
 {
   "type": "module",
   "dependencies": {
-    "@googlemaps/markerclusterer": "^2.5.3",
-    "@react-google-maps/api": "^2.20.3",
+    "@googlemaps/markerclusterer": "2.5.3",
+    "@react-google-maps/api": "2.20.3",
     "@vis.gl/react-google-maps": "latest",
-    "add": "^2.0.6",
-    "nanoid": "^5.0.8",
-    "or": "^0.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "use-deep-compare": "^1.3.0",
-    "vite": "^5.0.4",
-    "yarn": "^1.22.22"
+    "add": "2.0.6",
+    "nanoid": "5.0.8",
+    "or": "0.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "use-deep-compare": "1.3.0"
   },
   "scripts": {
     "start": "vite",
@@ -20,11 +18,14 @@
     "dev": "vite"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "eslint": "^8.57.1",
-    "eslint-config-react-app": "^7.0.1",
-    "typescript": "^5.6.3"
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@types/google.maps": "3.57.0",
+    "eslint": "8.57.1",
+    "eslint-config-react-app": "7.0.1",
+    "typescript": "5.6.3",
+    "vite": "latest",
+    "yarn": "1.22.22"
   }
 }
