--- a/solution/package.json
+++ b/solution/package.json
@@ -2,7 +2,8 @@
   "type": "module",
   "dependencies": {
     "@googlemaps/markerclusterer": "2.5.3",
-    "@react-google-maps/api": "2.20.3",
+    "@react-google-maps/api": "^2.20.3",
+    "@react-google-maps/marker-clusterer": "^2.20.0",
     "@vis.gl/react-google-maps": "latest",
     "add": "2.0.6",
     "nanoid": "5.0.8",
@@ -18,10 +19,10 @@
     "dev": "vite"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.57.0",
     "@types/node": "22.9.0",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "@types/google.maps": "3.57.0",
     "eslint": "8.57.1",
     "eslint-config-react-app": "7.0.1",
     "typescript": "5.6.3",
