--- a/solution/package.json
+++ b/solution/package.json
@@ -1,32 +1,25 @@
 {
   "type": "module",
   "dependencies": {
-    "@googlemaps/markerclusterer": "2.5.3",
+    "@googlemaps/markerclusterer": "^2.5.1",
     "@react-google-maps/api": "^2.20.3",
     "@react-google-maps/marker-clusterer": "^2.20.0",
+    "@types/nanoid": "^2.1.0",
     "@vis.gl/react-google-maps": "latest",
-    "add": "2.0.6",
-    "nanoid": "5.0.8",
-    "or": "0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "use-deep-compare": "1.3.0"
+    "core-js": "^3.39.0",
+    "nanoid": "^5.0.8",
+    "papaparse": "^5.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^5.0.4"
   },
   "scripts": {
     "start": "vite",
     "start-local": "vite --config ./vite.config.local.js",
-    "build": "vite build",
-    "dev": "vite"
+    "build": "vite build"
   },
   "devDependencies": {
-    "@types/google.maps": "^3.57.0",
-    "@types/node": "22.9.0",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "eslint": "8.57.1",
-    "eslint-config-react-app": "7.0.1",
-    "typescript": "5.6.3",
-    "vite": "latest",
-    "yarn": "1.22.22"
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1"
   }
 }
