--- a/solution/tsconfig.json
+++ b/solution/tsconfig.json
@@ -1,23 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "lib": ["es2020", "dom", "dom.iterable"],
-    "module": "ESNext",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "jsx": "react-jsx",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "allowSyntheticDefaultImports": true,
-    "types": []  // Unless using specific types, leave as an empty array
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "bundler",  // Keep this as it is - essential for Vite
+    "jsx": "react-jsx",  // Or "react" if using newer React versions
+    "strict": true,  // Recommended: Enforces stricter type checking
+    "esModuleInterop": true, // Often helpful for compatibility
+    "skipLibCheck": true, // Improves build performance
+    "forceConsistentCasingInFileNames": true, // Enforces consistent casing
+    "isolatedModules": true, // Recommended for build performance with Vite
+    "noEmit": true, // Vite handles emitting JS; this prevents conflicts
+    "incremental": true,  // Improves incremental build speeds
+    "resolveJsonModule": true, // Enables importing JSON modules
+    "types": ["vite/client"] // Necessary for Vite's type definitions
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.js",
-    "vite-env.d.ts"
-  ]
+  "include": ["src"], //  Sufficient in most cases; simpler than "src/**/*"
+  "exclude": ["node_modules"]  //  "dist" is handled by Vite; no need to exclude
 }
