--- a/solution/package.json
+++ b/solution/package.json
@@ -1,25 +1,50 @@
 {
+  "name": "solution",
+  "version": "1.0.0",
+  "description": "Solution for the Kueccha challenge",
   "type": "module",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://your-repo-url.git"
+  },
+  "author": "Your Name <your.email@example.com>",
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
-    "@googlemaps/markerclusterer": "^2.5.1",
-    "@react-google-maps/api": "^2.20.3",
-    "@react-google-maps/marker-clusterer": "^2.20.0",
-    "@types/nanoid": "^2.1.0",
-    "@vis.gl/react-google-maps": "latest",
-    "core-js": "^3.39.0",
-    "nanoid": "^5.0.8",
-    "papaparse": "^5.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite": "^5.0.4"
+    "@googlemaps/markerclusterer": "^2.5.3",
+    "@react-google-maps/api": "2.20.3",
+    "@types/google.maps": "3.58.1",
+    "@types/nanoid": "2.1.0",
+    "@vis.gl/react-google-maps": "1.4.0",
+    "core-js": "3.39.0",
+    "nanoid": "5.0.8",
+    "papaparse": "5.4.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "vite": "5.4.11"
   },
   "scripts": {
     "start": "vite",
     "start-local": "vite --config ./vite.config.local.js",
-    "build": "vite build"
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1"
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.1.0"
   }
 }
