復元ポイント

--- a/solution/package.json
+++ b/solution/package.json
@@ -24,8 +24,7 @@
     "nanoid": "5.0.8",
     "papaparse": "5.4.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "vite": "5.4.11"
+    "react-dom": "18.3.1"
   },
   "scripts": {
     "start": "vite",
@@ -45,6 +44,7 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "vite": "^5.4.11"
   }
 }
