--- a/solution/package.json
+++ b/solution/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.5.3",
     "@react-google-maps/api": "2.20.3",
+    "@react-google-maps/marker-clusterer": "^2.20.0",
     "@types/google.maps": "3.58.1",
     "@types/nanoid": "2.1.0",
     "@vis.gl/react-google-maps": "1.4.0",
@@ -27,6 +28,7 @@
     "react-dom": "18.3.1"
   },
   "scripts": {
+    "dev": "vite",
     "start": "vite",
     "start-local": "vite --config ./vite.config.local.js",
     "build": "vite build",
