--- a/solution/package.json
+++ b/solution/package.json
@@ -39,6 +39,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
