--- a/solution/package.json
+++ b/solution/package.json
@@ -11,17 +11,17 @@
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
   },
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.5.3",
     "@react-google-maps/api": "^2.20.3",
     "@react-google-maps/marker-clusterer": "^2.20.0",
-    "@types/nanoid": "2.1.0",
-    "@vis.gl/react-google-maps": "1.4.0",
+    "@types/nanoid": "3.0.0",
+    "@vis.gl/react-google-maps": "1.4.2",
     "core-js": "3.39.0",
-    "nanoid": "5.0.8",
+    "nanoid": "^5.0.9",
     "papaparse": "5.4.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -39,15 +39,14 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.58.1",
-    "@types/googlemaps": "^3.43.3",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.1.0",
-    "vite": "^5.4.11"
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "prettier": "^3.4.1",
+    "vite": "^6.0.1"
   }
 }
