--- a/solution/package.json
+++ b/solution/package.json
@@ -15,6 +15,7 @@
 		"npm": ">=10.0.0"
 	},
 	"dependencies": {
+		"@googlemaps/js-api-loader": "^1.16.8",
 		"@googlemaps/markerclusterer": "^2.5.3",
 		"@react-google-maps/api": "^2.20.3",
 		"@react-google-maps/infobox": "^2.20.0",
