--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,15 @@
 {
   "configurations": [
-    
     {
       "type": "msedge",
       "name": "http://localhost:5173/",
       "request": "launch",
-      "url": "http://localhost:5173/"
+      "url": "http://localhost:5173/",
+      "webRoot": "${workspaceFolder}",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
     }
   ]
 }
