--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=16"
+    "node": ">=20"
   },
   "scripts": {
     "dev": "vite",
@@ -21,7 +21,8 @@
     "build:prod": "vite build --mode production",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean-all": "rimraf node_modules"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
@@ -32,21 +33,21 @@
     "core-js": "^3.39.0",
     "nanoid": "^5.0.9",
     "papaparse": "^5.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/google.maps": "^3.58.1",
-    "@types/nanoid": "^2.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
-    "eslint": "^9.16.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
     "prettier": "^3.4.1",
     "typescript": "^5.3.2",
-    "vite": "^6.0.1"
+    "vite": "^5.0.10"
   }
 }
