--- a/package.json
+++ b/package.json
@@ -33,21 +33,22 @@
     "core-js": "^3.39.0",
     "nanoid": "^5.0.9",
     "papaparse": "^5.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/google.maps": "^3.58.1",
+    "@types/markerclustererplus": "^2.1.33",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
     "prettier": "^3.4.1",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.10"
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11"
   }
 }
