--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
     "@googlemaps/markerclusterer": "^2.5.3",
+    "@googlemaps/markerclustererplus": "^1.2.10",
     "@react-google-maps/api": "^2.20.3",
     "@react-google-maps/infobox": "^2.20.0",
     "@react-google-maps/marker-clusterer": "^2.20.0",
@@ -39,16 +40,17 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.58.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.2",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
-    "prettier": "^3.4.1",
+    "prettier": "^3.4.2",
     "typescript": "^5.7.2",
     "vite": "^5.4.11"
   }
