--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@react-google-maps/infobox": "^2.20.0",
     "@react-google-maps/marker-clusterer": "^2.20.0",
+    "@types/google-maps": "^3.2.6",
     "core-js": "^3.39.0",
     "nanoid": "^5.0.9",
     "papaparse": "^5.4.1",
