--- a/package.json
+++ b/package.json
@@ -1,52 +1,51 @@
 {
-  "name": "kueccha-solution",
-  "version": "1.0.0",
-  "description": "Solution for the Kueccha challenge using React, Google Maps, and TypeScript.",
-  "type": "module",
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nakanaka07/kueccha.git"
-  },
-  "author": "Yuichiro Nakaguchi <nakaguchi07@gmail.com>",
-  "license": "MIT",
-  "engines": {
-    "node": ">=20"
-  },
-  "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "build:prod": "vite build --mode production",
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "preview": "vite preview",
-    "clean-all": "rimraf node_modules"
-  },
-  "dependencies": {
-    "@googlemaps/js-api-loader": "^1.16.8",
-    "@googlemaps/markerclusterer": "^2.5.3",
-    "@react-google-maps/api": "^2.20.3",
-    "@react-google-maps/infobox": "^2.20.0",
-    "@react-google-maps/marker-clusterer": "^2.20.0",
-    "core-js": "^3.39.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rimraf": "^6.0.1"
-  },
-  "devDependencies": {
-    "@types/google.maps": "^3.58.1",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.16",
-    "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.37.2",
-    "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11"
-  }
+	"name": "kueccha-solution",
+	"version": "1.0.0",
+	"description": "Solution for the Kueccha challenge using React, Google Maps, and TypeScript.",
+	"type": "module",
+	"private": true,
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nakanaka07/kueccha.git"
+	},
+	"author": "Yuichiro Nakaguchi <nakaguchi07@gmail.com>",
+	"license": "MIT",
+	"engines": {
+		"node": ">=20"
+	},
+	"scripts": {
+		"dev": "vite",
+		"start": "vite",
+		"build": "vite build",
+		"build:dev": "vite build --mode development",
+		"build:prod": "vite build --mode production",
+		"lint": "eslint src",
+		"lint:fix": "eslint src --fix",
+		"preview": "vite preview",
+		"clean-all": "rd /s /q node_modules"
+	},
+	"dependencies": {
+		"@googlemaps/js-api-loader": "^1.16.8",
+		"@googlemaps/markerclusterer": "^2.5.3",
+		"@react-google-maps/api": "^2.20.3",
+		"@react-google-maps/infobox": "^2.20.0",
+		"@react-google-maps/marker-clusterer": "^2.20.0",
+		"core-js": "^3.39.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@types/google.maps": "^3.58.1",
+		"@types/node": "^22.10.2",
+		"@types/react": "^19.0.2",
+		"@types/react-dom": "^19.0.2",
+		"@typescript-eslint/eslint-plugin": "^8.18.1",
+		"@typescript-eslint/parser": "^8.18.1",
+		"eslint": "^9.17.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-react": "^7.37.2",
+		"prettier": "^3.4.2",
+		"typescript": "^5.7.2",
+		"vite": "^6.0.3"
+	}
 }
