最適化しました。

--- a/package.json
+++ b/package.json
@@ -35,40 +35,34 @@
     "clean-all": "rimraf node_modules"
   },
   "dependencies": {
-    "@googlemaps/js-api-loader": "1.16.8",
-    "@googlemaps/markerclusterer": "2.5.3",
-    "@react-google-maps/api": "2.20.5",
-    "@react-google-maps/infobox": "2.20.0",
-    "@react-google-maps/marker-clusterer": "2.20.0",
-    "glob": "11.0.0",
-    "lru-cache": "11.0.2",
-    "react": "19.0.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@googlemaps/markerclusterer": "^2.5.3",
+    "@react-google-maps/api": "^2.20.5",
+    "@react-google-maps/infobox": "^2.20.0",
+    "@react-google-maps/marker-clusterer": "^2.20.0",
+    "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/google.maps": "^3.58.1",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.3",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.18.2",
-    "@typescript-eslint/parser": "^8.18.2",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
     "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
-    "eslint-plugin-eslint-plugin": "^6.4.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2",
     "vite": "^6.0.6",
-    "vite-plugin-env-compatible": "^2.0.1",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "$schema": "https://json.schemastore.org/package"
