--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,10 @@
     // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-
         {
             "type": "msedge",
             "request": "launch",
-            "name": "localhost に対して Edge を起動する",
+            "name": "Launch Edge against localhost",
             "url": "http://localhost:5173",
             "webRoot": "${workspaceFolder}"
         }
