--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@rollup/plugin-replace": "^6.0.2",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^22.10.3",
     "@types/react": "^19.0.2",
