--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,8 @@ jobs:
           VITE_GOOGLE_SPREADSHEET_ID=${{ secrets.SPREADSHEET_ID }}
           EOL
 
-      - name: Clear pnpm cache
-        run: pnpm store prune
+      # - name: Clear pnpm cache
+      #   run: pnpm store prune
 
       - name: Install dependencies
         run: pnpm install
