--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4.0.0
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.0.0
         with:
-          version: 8.0.0
+          version: latest
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -39,10 +40,7 @@ jobs:
           VITE_GOOGLE_SPREADSHEET_ID=${{ secrets.SPREADSHEET_ID }}
           EOL
 
-      - name: Ensure pnpm store directory exists
-        run: mkdir -p /home/runner/setup-pnpm/node_modules/.bin/store/v3/files
-
-      - name: Prune pnpm store
+      - name: Clean pnpm cache
         run: pnpm store prune
 
       - name: Install dependencies
