--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ node_modules/
 .env.local
 
 # Vite build output
-# dist
+dist
 
 # Yarn v2
 .yarn/cache
@@ -51,6 +51,3 @@ node_modules/
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-
-# Debug log file
-node_modules
