--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@googlemaps/markerclusterer": "^2.5.3",
     "@react-google-maps/api": "^2.20.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-joyride": "^2.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
