フィードバックフォームにEmailJSを統合し、フィードバック送信機能を追加しました。また、ズームコントロールをマップに有効化し、チェックボックスの色を設定しました。さらに、モーダルウィンドウのスタイルを追加し、型定義ファイルを作成しました。

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -40,6 +40,9 @@ jobs:
           VITE_GOOGLE_MAPS_MAP_ID=${{ secrets.MAPS_MAP_ID }}
           VITE_GOOGLE_SHEETS_API_KEY=${{ secrets.SHEETS_API_KEY }}
           VITE_GOOGLE_SPREADSHEET_ID=${{ secrets.SPREADSHEET_ID }}
+          VITE_EMAILJS_SERVICE_ID=${{ secrets.EMAILJS_SERVICE_ID }}
+          VITE_EMAILJS_TEMPLATE_ID=${{ secrets.EMAILJS_TEMPLATE_ID }}
+          VITE_EMAILJS_PUBLIC_KEY=${{ secrets.EMAILJS_PUBLIC_KEY }}
           EOL
 
       - name: Clean pnpm cache
