--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clean-all": "rimraf node_modules"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@googlemaps/markerclusterer": "^2.5.3",
     "@react-google-maps/api": "^2.20.5",
