マップコンテナとマーカーのスタイルを追加し、ツアーステップを再構成しました。また、ローディングフォールバックコンポーネントを新規作成し、エラーメッセージの定義を追加しました。不要なファイルを削除し、インポートパスを修正しました。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     },
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["./src", "*.config.ts"],
+  "include": ["./src", "*.config.ts", "src/components/feedbackform/FeedbackForm.tsx"],
   "exclude": ["node_modules", "dist"]
 }
