--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
+  "$schema": "https://json.schemastore.org/tsconfig", // スキーマのURL
   "compilerOptions": {
     "target": "ES2022", // 最新のECMAScriptターゲット
     "module": "ES2022", // 最新のモジュールシステム
