.gitignoreと.npmrcに環境固有のファイルを追加し、eslint設定を更新して未使用変数のルールを明確化しました。

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,17 @@ dist
 localhost.crt
 localhost.key
 openssl.cnf
+
+# MacOS files
+.DS_Store
+
+# Windows thumbnail cache
+Thumbs.db
+
+# Linux trash folder
+.Trash-*
+
+# Temporary files
+*.swp
+*.swo
+*~
