--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "target": "ES2022", // 出力するJavaScriptのバージョンを指定
+    "target": "ESNext", // 出力するJavaScriptのバージョンを指定
     "module": "ESNext", // 使用するモジュールシステムを指定
-    "moduleResolution": "Bundler", // モジュール解決の方法を指定
+    "moduleResolution": "node", // モジュール解決の方法を指定
     "lib": ["DOM", "DOM.Iterable", "ES2022"], // 使用するライブラリを指定
     "esModuleInterop": true, // ESモジュールの互換性を有効にする
     "allowSyntheticDefaultImports": true, // 合成デフォルトインポートを許可
@@ -11,16 +11,17 @@
     "forceConsistentCasingInFileNames": true, // ファイル名の大文字小文字を強制
     "resolveJsonModule": true, // JSONモジュールの解決を有効にする
     "isolatedModules": true, // 各ファイルを独立したモジュールとして扱う
-    "jsx": "react-jsx", // JSXの変換方法を指定
+    "jsx": "react", // JSXの変換方法を指定
     "incremental": true, // 増分コンパイルを有効にする
     "outDir": "./dist", // 出力ディレクトリを指定
     "paths": {
       "@/*": ["./src/*"] // エイリアスを設定
     },
-    "typeRoots": ["./node_modules/@types", "./types"] // 型定義ファイルのルートを指定
+    "typeRoots": ["./node_modules/@types", "./types"], // 型定義ファイルのルートを指定
+    "skipLibCheck": true // ライブラリチェックをスキップ
   },
-  "include": ["./src", "*.config.ts", "./src/utils/types.ts", "server.ts"], // コンパイル対象のファイルを指定
-  "exclude": ["node_modules", "dist"], // コンパイル対象から除外するファイルを指定
+  "include": ["src/**/*", "server.ts", "vite.config.js"],
+  "exclude": ["dist"],
   "ts-node": {
     "transpileOnly": true, // トランスパイルのみを行う
     "esm": true // ESモジュールを有効にする
