.npmrcの不要なコメントを削除し、SECURITY.mdを削除しました。また、package.jsonにdotenvを追加し、server.tsで環境変数を読み込むようにしました。prettierrcの設定を整理し、index.htmlから不要なスタイルを削除しました。gitignoreを整理し、pnpm-lock.yamlにdotenvのバージョンを追加しました。

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "description": "Solution for the sadodekueccha challenge using React, Google Maps, and TypeScript.",
+  "description": "A solution for the Sadodekueccha challenge using React, Google Maps, and TypeScript.",
   "keywords": [
     "react",
     "google maps",
@@ -38,6 +38,7 @@
     "@react-google-maps/infobox": "^2.20.0",
     "@react-google-maps/marker-clusterer": "^2.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "lru-cache": "^11.0.2",
