--- a/.gitignore
+++ b/.gitignore
@@ -5,54 +5,52 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Runtime data
+# PIDs
 pids
 *.pid
 *.seed
 *.pid.lock
 
-# Dependency directories
+# Node modules
 node_modules/
 
-# TypeScript cache
+# TypeScript
 *.tsbuildinfo
 
-# Optional npm cache directory
+# npm
 .npm
 
-# Optional eslint cache
+# ESLint
 .eslintcache
 
-# Optional stylelint cache
+# Stylelint
 .stylelintcache
 
-# Optional REPL history
+# REPL
 .node_repl_history
 
-# Output of 'npm pack'
+# Packages
 *.tgz
 
-# Yarn Integrity file
+# Yarn
 .yarn-integrity
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# Vite build output
-dist
-
-# Yarn v2
 .yarn/cache
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
 
-# IDE or editor directories
+# Environment variables
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Build output
+dist
+
+# IDEs and editors
 .vscode/
 .idea/
 
@@ -61,16 +59,18 @@ localhost.crt
 localhost.key
 openssl.cnf
 
-# MacOS files
+# macOS
 .DS_Store
 
-# Windows thumbnail cache
+# Windows
 Thumbs.db
 
-# Linux trash folder
+# Trash
 .Trash-*
 
-# Temporary files
+# Vim
 *.swp
 *.swo
+
+# Temporary files
 *~
