CSSモジュールの型定義を追加し、各機能のエクスポートを整理。インポートパスを更新し、不要なファイルを削除。UI関連の定数を統一し、SkeletonLoaderコンポーネントを移動。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     },
     "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["src/**/*", "server.ts", "vite.config.js", "eslint.config.js"],
+  "include": ["src/**/*", "server.ts", "vite.config.js", "eslint.config.js", "env.d.ts", "css.d.ts"],
   "exclude": ["dist", "node_modules"],
   "ts-node": {
     "transpileOnly": true,
