型定義を整理し、新しいコンポーネントとフックを追加。不要なファイルを削除し、インポートパスを修正。エラーハンドリング用の型を追加し、依存関係を整理。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,10 +28,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@core/*": ["src/core/*"],
-      "@modules/*": ["src/modules/*"],
-      "@shared/*": ["src/shared/*"],
-      "@app/*": ["src/app/*"]
+      "@core/*": ["./src/core/*"],
+      "@features/*": ["./src/features/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@app/*": ["./src/app/*"]
     },
     "typeRoots": ["./node_modules/@types", "./types"]
   },
