--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,17 +26,18 @@
     "skipLibCheck": true,
 
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "@core/*": ["./src/core/*"],
-      "@features/*": ["./src/features/*"],
-      "@shared/*": ["./src/shared/*"],
-      "@assets/*": ["./src/assets/*"],
-      "@app/*": ["./src/app/*"]
-    },
     "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["src/**/*", "server.ts", "vite.config.js", "eslint.config.js", "env.d.ts", "css.d.ts", "src/common", "main.tsx"],
+  "include": [
+    "src/**/*",
+    "server.ts",
+    "vite.config.js",
+    "eslint.config.js",
+    "env.d.ts",
+    "css.d.ts",
+    "src/common",
+    "main.tsx"
+  ],
   "exclude": ["dist", "node_modules"],
   "ts-node": {
     "transpileOnly": true,
