アプリケーションの設定と構成を改善し、デバイス検出機能を追加。環境変数のバリデーションを実装し、コードの可読性を向上させるためにリファクタリングを実施。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "jsx": "react",
 
@@ -26,6 +26,9 @@
     "skipLibCheck": true,
 
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": [
@@ -35,8 +38,7 @@
     "eslint.config.js",
     "env.d.ts",
     "css.d.ts",
-    "src/common",
-    "main.tsx"
+    "src/main.tsx"
   ],
   "exclude": ["dist", "node_modules"],
   "ts-node": {
