--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#4a6da7",
   "icons": [
     {
-      "src": "./src/utils/images/row2.png",
+      "src": "./src/images/row2.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./src/utils/images/row2.png",
+      "src": "./src/images/row2.png",
       "sizes": "512x512",
       "type": "image/png"
     }
